style updates to dropdowns - not complete

--- a/interior.html
+++ b/interior.html
@@ -33,29 +33,58 @@
          </section><!-- end breadcrumb-->
       
             <section class="interior_subNav">
-                <article class="leftNav">
-                    <div class="categoryViewingLabel">
-                       Viewing:
-                    </div>
-                    <div class="containOptions">
-                          <div class="categoryOption">
-                                All Categories
-                          </div>
-                          <div class="posCategoryDropdownTriangle skinDropdownTriangle"></div>
-                    </div>
+                <section class="leftNav">
+                	<article class="categoryDropdown">
+                        <div class="dropdownLabel">
+                           Viewing:
+                        </div>
+                        <div class="optionsContain">
+                              <div class="activeOption">
+                                    All Categories
+                              </div>
+                              <div class="posDropdownTriangle skinDropdownTriangle"></div>
+                              <div class="dropdownOptions categoryOptions">
+                                <div class="sortOption">
+                                   All Categories
+                                </div>
+                                <div class="sortOption">
+                                   House & Home
+                                </div>
+                                <div class="sortOption">
+                                   Clothing
+                                </div>
+                                <div class="sortOption">
+                                   Automotive
+                                </div>
+                            </div>
+                        </div>
+                    </article>
                 <div class="cb"></div>
-                </article><!-- end leftNav-->
-                <article class="rightNav excludeFromMobile">
-                    <div class="sortByLabel">
-                       Sort By:
-                    </div>
-                    <div class="containSortOptions">
-                          <div class="activeOption">
-                                Popularity
-                          </div>
-                          <div class="posDropdownTriangle skinDropdownTriangle"></div>
-                    </div>
-                </article><!-- end rightNav-->
+                </section><!-- end leftNav-->
+                <section class="rightNav excludeFromMobile">
+                	<article class="sortDropdown">
+                        <div class="dropdownLabel">
+                           Sort By:
+                        </div>
+                        <div class="optionsContain">
+                              <div class="activeOption">
+                                    Popularity
+                              </div>
+                              <div class="posDropdownTriangle skinDropdownTriangle"></div>
+                              <div class="dropdownOptions sortOptions">
+                                <div class="sortOption">
+                                   Popularity
+                                </div>
+                                <div class="sortOption">
+                                   Price Low - High
+                                </div>
+                                <div class="sortOption">
+                                   Price High - Low
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </section><!-- end rightNav-->
             </section><!--end interior_subNav-->
             
             <div class="cb"></div>
