--- a/landing.html
+++ b/landing.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/site_wide.css">
     <link rel="stylesheet" type="text/css" href="css/buttons_and_icons.css">
+    <link rel="stylesheet" type="text/css" href="css/dropdown.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/globalnav.css">
     <link rel="stylesheet" type="text/css" href="css/entry.css">
@@ -28,17 +29,17 @@
             <section id="LandingContain">
 
               <section class="landingPageControls">
-              	<article class="categoryDropdown">
-                    <div class="categoryViewingLabel">
-                       Viewing:
-                    </div>
-                    <div class="containOptions">
-                          <div class="activeOption">
-                                All Categories
-                          </div>
-                          <div class="posDropdownTriangle skinDropdownTriangle"></div>
-                    </div>
-        		</article><!-- end categoryDropdown -->
+            	<article class="categoryDropdown">
+                        <div class="dropdownLabel">
+                           Viewing:
+                        </div>
+                        <div class="optionsContain">
+                              <div class="activeOption">
+                                    All Categories
+                              </div>
+                              <div class="posDropdownTriangle skinDropdownTriangle"></div>
+                        </div>
+                    </article>
                
                 <article class="helpContainer excludeFromMobile">
                     <span class="helpMessage">Help</span><span class="helpBox">?</span>
