--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/changelocation.css">
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
     <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
+    <link rel="stylesheet" type="text/css" href="css/listingTile.css">
     <link rel="stylesheet" type="text/css" href="css/forms_and_inputs.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
