--- a/shoppingList_printTemplate.html
+++ b/shoppingList_printTemplate.html
@@ -18,8 +18,8 @@
             padding: 20px;
         }
         .itemImage {
-            width: 50px;
-            height: 50px;
+            width: 100px;
+            height: 100px;
             vertical-align: top; 
             float: left
         }
@@ -33,10 +33,10 @@
         <p style="margin-top: 10px;">2140 N. Elston Ave., Chicago, IL 60614</p>
         <p class="emailstorePhone">(773) 342-9032</p>
         <br>
-        <p class="count" style="color:Black; font-weight:bold;border-bottom: 1px solid #ccc;">3 items</p>
-        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc; width: 100%;">
+        <p class="count" style="color:Black; font-weight:bold;border-bottom: 1px solid #ccc; padding-bottom:5px;">3 items</p>
+        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc;">
           <tr>
-            <td style="padding: 10px;">
+            <td style="padding: 10px; vertical-align:middle;">
             <img class="itemImage" src="images/150118_02AD_3a.jpg" />
           </td>
           <td style="vertical-align: top; padding: 10px;">
@@ -50,9 +50,9 @@
           </td>
           </tr>
         </table>
-        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc; width: 100%;">
+        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc;">
           <tr>
-            <td style="padding: 10px;">
+            <td style="padding: 10px; vertical-align:middle;">
             <img class="itemImage" src="images/150118_02AD_3a.jpg" />
           </td>
           <td style="vertical-align: top; padding: 10px;">
@@ -67,9 +67,9 @@
           </tr>
         </table>
 
-        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc; width: 100%;">
+        <table style="padding: 15px 10px; border-bottom: 1px solid #ccc;">
           <tr>
-            <td style="padding: 10px;">
+            <td style="padding: 10px; vertical-align:middle;">
             <img class="itemImage" src="images/150118_02AD_3a.jpg" />
           </td>
           <td style="vertical-align: top; padding: 10px;">
