add dropdown to full screen

--- a/Fullscreen.html
+++ b/Fullscreen.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/site_wide.css">
     <link rel="stylesheet" type="text/css" href="css/buttons_and_icons.css">
+    <link rel="stylesheet" type="text/css" href="css/dropdown.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/globalnav.css">
     <link rel="stylesheet" type="text/css" href="css/entry.css">
@@ -30,27 +31,28 @@
                   Valid Jan 15 - Jan 25 (except as noted)
             </div>
      
-             <div class="containPageSortOptions">     
-                <div class="activePageSortOption">
+             <div class="optionsContain">     
+                <div class="activeOption">
                    Page 1 of 23
                 </div>
-                <div class="pageDropdownOptions">
-                    <div class="pageSortOption">
+                <div class="posDropdownTriangle skinDropdownTriangle"></div>
+                <div class="dropdownOptions pageOptions">
+                    <div class="sortOption">
                        Page 1 of 23
                     </div>
-                    <div class="pageSortOption">
+                    <div class="sortOption">
                        Page 2 of 23
                     </div>
-                    <div class="pageSortOption">
+                    <div class="sortOption">
                        Page 3 of 23
                     </div>
-                    <div class="pageSortOption">
+                    <div class="sortOption">
                        Page 4 of 23
                     </div>
-                    <div class="pageSortOption">
+                    <div class="sortOption">
                        Page 5 of 23
                     </div>
-                    <div class="pageSortOption">
+                    <div class="sortOption">
                        Page 6 of 23
                     </div>
                 </div>
