--- a/changelocation.html
+++ b/changelocation.html
@@ -30,7 +30,7 @@
              <a class="stdLink sl_breadcrumb" href="#">Back</a> 
          </section><!-- end breadcrumb-->
             <section id="StoreLocations">
-                    <article id="myStore">
+                    <article id="MyStore">
                         <p class="locationTitle">My Store</p>
                             <div class="storeInfo">
                                 <p class="storeName">Store Name 1</p>
