finishing dropdown updates

--- a/BrowseByPage.html
+++ b/BrowseByPage.html
@@ -37,7 +37,7 @@
                 <div class="posDropdownTriangle skinDropdownTriangle"></div>
                 <div class="dropdownOptions adSelectOptions">
                     <div class="sortOption">
-                       Weekly Ad Number 1 Weekly Ad Number 1
+                       Weekly Ad Number 1 Weekly Ad Number 1 Weekly Ad Number 1 Weekly Ad Number 1
                     </div>
                     <div class="sortOption">
                        Weekly Ad Number 2
