--- a/interior.html
+++ b/interior.html
@@ -48,10 +48,7 @@
                                    All Categories
                                 </div>
                                 <div class="sortOption">
-                                   House & Home
-                                </div>
-                                <div class="sortOption">
-                                   Clothing
+                                   House & Home and even maybe some gardening appareal
                                 </div>
                                 <div class="sortOption">
                                    Automotive
