adding dropdown to bbp mobile

--- a/BrowseByPageMobile.html
+++ b/BrowseByPageMobile.html
@@ -22,16 +22,26 @@
     <main class="shoplocal_container">
 
          <section class="adSelector">
-            <div class="nowViewingLabel">
-               Now Viewing:
+            <div class="dropdownLabel">
+                       Viewing:
             </div>
-            <div class="containNowViewingOptions">
-                  <div class="nowViewingOption">
-                        Weekly Ad Title
-                  </div>
-                  <div class="posDropdownTriangle skinDropdownTriangle"></div>
+            <div class="optionsContain">
+                 <div class="activeOption">
+                       Weekly Ad Number 1
+                 </div>
+                <div class="posDropdownTriangle skinDropdownTriangle"></div>
+                <div class="dropdownOptions adSelectOptions">
+                    <div class="sortOption">
+                       Weekly Ad Number 1 Weekly Ad Number 1 Weekly Ad Number 1 Weekly Ad Number 1
+                    </div>
+                    <div class="sortOption">
+                       Weekly Ad Number 2
+                    </div>
+                    <div class="sortOption">
+                       Weekly Ad Number 3
+                    </div>
+                </div>
             </div>
-            <div class="cb"></div>
         </section><!-- end adSelector -->
         
         <div class="cb"></div>
