--- a/helpOverlay.html
+++ b/helpOverlay.html
@@ -95,7 +95,7 @@
             <div class="globalNav_rowTwo">
                     <div class="containSearch">
                         <input type="text" value="Search Deals">
-                        <button id="citystatezip_submit" type="submit" class="button inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
+                        <button type="submit" class="button inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
                     </div>
                     <div class="tabsContain">
                         <div class="globalNavTab">Browse Ad Pages</div>
@@ -174,7 +174,6 @@
                           Kitchen
                       </h2>
                   </div>
-                  </div>
               </article>
               <article class="secondTemplate">
                   <div class="landingTemplate_LSSI cb">
@@ -230,7 +229,6 @@
                       <h2>
                           Kitchen
                       </h2>
-                  </div>
                   </div>
               </article>
               <article class="thirdTemplate">
