cleaning up contain classes for forms/inputs

--- a/changelocation.html
+++ b/changelocation.html
@@ -81,7 +81,7 @@
                
                     <article id="SearchStores">
                         <p class="storesNearSearchTitle">Search stores near:</p>
-                        <div class="containSearch">
+                        <div class="searchContain">
                             <input type="text" value="Example: Chicago, IL">
                             <button type="submit"></button>
                         </div>
