--- a/noContent.html
+++ b/noContent.html
@@ -35,7 +35,7 @@
                 </h2>
             
                 <section>
-                    <div class="containSearch">
+                    <div class="searchContain">
                         <input type="text" value="Example: Chicago, IL">
                         <button type="submit" class="button inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
                     </div>
