--- a/nuep.html
+++ b/nuep.html
@@ -30,7 +30,7 @@
       <div id="EntryContain">
           <p class="title">To view deals for a location near you, enter a <span class="bold">City, State</span> or <span class="bold">Zip Code.</span></p>
    
-          <div class="containSearch">
+          <div class="searchContain">
                <input type="text" value="Example: Chicago, IL">
                <button id="citystatezip_submit" type="submit"></button>
           </div>
