--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -45,7 +45,7 @@
             
            <section class="emailForm">
                 <p class="emailInstructions">Enter comma seperated email addresses</p>
-               <form class="containSend">
+               <form class="sendContain">
                    <input type="text" value="Example: Chicago, IL">
                    <button type="submit"></button>
               </form>
