--- a/itemDetail.html
+++ b/itemDetail.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/bblisting.css">
     <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
     <link rel="stylesheet" type="text/css" href="css/changelocation.css">
+    <link rel="stylesheet" type="text/css" href="css/modals.css">
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
     <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
@@ -29,7 +30,7 @@
              <a class="stdLink sl_breadcrumb" href="#">Back</a> 
          </section><!-- end breadcrumb-->
         
-        <section class="containListingDetail">
+        <section class="containModal containListingDetail">
             <article class="leftColumn_IDP">
                   <img class="itemImage" alt="" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg">
                   <div class="viewLarger stdLink excludeFromMobile">
