--- a/nuep.html
+++ b/nuep.html
@@ -32,7 +32,7 @@
    
           <div class="searchContain">
                <input type="text" value="Example: Chicago, IL">
-               <button id="citystatezip_submit" type="submit"></button>
+               <button type="submit"></button>
           </div>
       </div><!--end entryContain-->
      
