updates to heading tags to use <h1> where appropriate instead of other tags

--- a/changelocation.html
+++ b/changelocation.html
@@ -32,8 +32,8 @@
              <a class="stdLink sl_breadcrumb" href="#">Back</a> 
          </section><!-- end breadcrumb-->
             <section id="StoreLocations">
-                    <article id="MyStore">
-                        <p class="locationTitle">My Store</p>
+                    <section id="MyStore">
+                        <h1 class="locationTitle">My Store</h1>
                             <article class="storeTile">
                                 <p class="storeName">Store Name 1</p>
                                 <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
@@ -44,7 +44,7 @@
                             </article>
                      </section><!--end myStore-->
                      <section id="StoresNearby">
-                        <p class="locationTitle">Stores Nearby</p>
+                        <h1 class="locationTitle">Stores Nearby</h1>
                             <article class="storeTile">
                                 <p class="storeName">Store Name 2</p>
                                 <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
