--- a/nuep.html
+++ b/nuep.html
@@ -28,7 +28,7 @@
     <main class="shoplocal_container">
     
       <div id="EntryContain">
-          <p class="title">To view deals for a location near you, enter a <strong>City, State</strong> or <strong>Zip Code.</strong></p>
+          <h1 class="title">To view deals for a location near you, enter a <strong>City, State</strong> or <strong>Zip Code.</strong></h1>
    
           <div class="searchContain">
                <input type="text" value="Example: Chicago, IL">
