store location phone numbers tweaked

--- a/noContent.html
+++ b/noContent.html
@@ -46,7 +46,7 @@
                 <article class="storeTile">
                     <p class="storeName">Store Name 2</p>
                     <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                    <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                    <p class="storePhone"><a class="stdLink">(773) 342-9032</a></p>
                     <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                     <p class="storeHours">Store Hours:</p>
                     <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
@@ -54,7 +54,7 @@
                 <article class="storeTile">
                     <p class="storeName">Store Name 2</p>
                     <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                    <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                    <p class="storePhone"><a class="stdLink">(773) 342-9032</a></p>
                     <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                     <p class="storeHours">Store Hours:</p>
                     <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
@@ -62,7 +62,7 @@
                 <article class="storeTile">
                     <p class="storeName">Store Name 2</p>
                     <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                    <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                    <p class="storePhone"><a class="stdLink">(773) 342-9032</a></p>
                     <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                     <p class="storeHours">Store Hours:</p>
                     <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
