--- a/changelocation.html
+++ b/changelocation.html
@@ -37,7 +37,7 @@
                             <article class="storeTile">
                                 <p class="storeName">Store Name 1</p>
                                 <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                                <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                                <p class="storePhone"><a class="stdLink">(773) 342-9032</a></p>
                                 <button class="button secondaryBtn changeLocationBtn">Keep as my store</button>
                                 <p class="storeHours">Store Hours:</p>
                                 <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
@@ -48,7 +48,7 @@
                             <article class="storeTile">
                                 <p class="storeName">Store Name 2</p>
                                 <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                                <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                                <p class="storePhone"><a class="stdLink">(773) 342-9032</a></p>
                                 <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                                 <p class="storeHours">Store Hours:</p>
                                 <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
@@ -56,7 +56,7 @@
                              <article class="storeTile">
                                 <p class="storeName">Store Name 3</p>
                                 <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                                <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                                <p class="storePhone"><a class="stdLink">(773) 342-9032</a></p>
                                 <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                                 <p class="storeHours">Store Hours:</p>
                                 <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
@@ -64,7 +64,7 @@
                              <article class="storeTile">
                                 <p class="storeName">Store Name 4</p>
                                 <address class="storeAddress">2140 N. Elston Ave., Chicago, IL 60614</address>
-                                <a class="stdLink"><p class="storePhone">(773) 342-9032</p></a>
+                                <p class="storePhone"><a class="stdLink">(773) 342-9032</a></p>
                                 <button class="button secondaryBtn changeLocationBtn">Make This My Store</button>
                                 <p class="storeHours">Store Hours:</p>
                                 <p class="hours"> M: 9am-10pm; TU: 9am-10pm; W: 9am-10pm; TH: 9am-10pm; F: 9am-11pm; SA: 8am-11pm; SU: 9am-9pm</p>
