--- a/BrowseByPageMobile.html
+++ b/BrowseByPageMobile.html
@@ -59,7 +59,7 @@
         
         <div class="cb"></div>
         
-        <section id="Toggle" class="theToggle">
+        <section class="theToggle">
             <div class="mobileBBPSliderXofY">
                 <span>Page 1 of 32</span>
                 <span> (5 items)</span>
