--- a/BrowseByPageMobile.html
+++ b/BrowseByPageMobile.html
@@ -64,8 +64,8 @@
                 <span>Page 1 of 32</span>
                 <span> (5 items)</span>
             </div>
-            <div id="toggleMax" class="zoomIcon bottom"></div>
-            <div id="toggleMin" class="zoomIcon top" style="display: none;"></div>
+            <div class="zoomIcon bottom"></div>
+            <div class="zoomIcon top" style="display: none;"></div>
         </section>
         
         <section id="ListingsContain">
