landing page changes! and clean up of containers

--- a/globalNav.html
+++ b/globalNav.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
     <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
     <link rel="stylesheet" type="text/css" href="css/forms_and_inputs.css">
+    <link rel="stylesheet" type="text/css" href="css/dropdown.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
@@ -29,7 +30,7 @@
         <nav class="sl_globalNav"> <!--begin global nav-->
             <div class="globalNav_rowOne">
                     <div class="locationContain_globalNav">
-                        <div class="currentAd_contain">
+                        <div class="currentAdContain">
                             <span class="currentAd_Title">Today's Ad for</span>
                             <address class="currentStoreInfo">1543 Caballo Road,Truth or Consequences, NM 87901</address>
                         </div>
@@ -46,9 +47,9 @@
             </div>
             
             <div class="globalNav_rowTwo">
-                    <div class="containSearch">
+                    <div class="searchContain">
                         <input type="text" value="Search Deals">
-                        <button type="submit"></button>
+                    	<button type="submit" class="button inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
                     </div>
                     <div class="tabsContain">
                         <div class="globalNavTab">Browse Ad Pages</div>
