--- a/itemDetail.html
+++ b/itemDetail.html
@@ -30,14 +30,14 @@
              <a class="stdLink sl_breadcrumb" href="#">Back</a> 
          </section><!-- end breadcrumb-->
         
-        <section class="containModal containListingDetail">
+        <section class="modalContain listingDetailContain">
             <article class="leftColumn_IDP">
                   <img class="itemImage" alt="" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg">
                   <div class="viewLarger stdLink excludeFromMobile">
                        view larger image
                   </div>
 
-                  <div class="containSocialShareIDP">
+                  <div class="socialShareIDP_contain">
                       <div class="skinFacebookIcon posShareIcon skinShareIcon">
                            Facebook
                       </div>
