--- a/landing.html
+++ b/landing.html
@@ -51,8 +51,9 @@
                <section id="GridContain">
                     <article class="firstTemplate">
                       <div class="landingTemplate_LSSI cb">
-                      <div class="firstMod">
-                           <div class="largeBlock">
+                      <div class="squarePadding excludeFromMobile"></div>
+                      <div class="blocksContain">
+                           <div class="largeBlock firstBlock">
                                 <div class="textInfo">
                                     <h2>
                                         Weekly Specials 5/25
@@ -64,10 +65,8 @@
                                 </div>
                                 <img class="imageContain"src="http://akimages.shoplocal.com/dyn_rppi/420.0.80.0/HomeDepot/large/0001_STA052514_bP1_h4lz0.jpg">
                         	</div>
-                      </div><!--end firstMod -->
-                      <div class="ss_holder">
-                      <div class="topBlock middleMod">
-                          <div class="smallBlock smallListingBlock" ng-click="openItemDetail(item.ID)">
+                      	<div class="ss_holder middleBlock">
+                          <div class="smallBlock smallListingBlock topBlock">
                             <div class="containText">
                                 <div class="dealInblock">
                                     20-40% Off
@@ -78,14 +77,12 @@
                                 <div class="addDealInBlock excludeFromTablet excludeFromMobile">
                                         additional deal information
                                 </div>
-                                <div class="hoursRemaining">
+                                <div class="timeRemaining">
                                      <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
                                 </div>
                             </div>
                                 <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
                         	</div>
-                      </div><!--end middleMod -->
-                      <div class="middleMod">
                           <div class="smallBlock">
                               <div class="offerCount">
                                    <p class="countNumber">10</p>
@@ -96,10 +93,8 @@
                                   Automotive
                               </h2>
                           </div>
-                     </div><!--end middleMod -->
-                  </div>
-                  <div class="lastMod">
-                       <div class="tallBlock">
+                  		</div>
+                       <div class="tallBlock lastBlock">
                           <div class="offerCount">
                                   <p class="countNumber">6</p>
                                   <p>DEALS</p>
@@ -109,14 +104,15 @@
                               Kitchen
                           </h2>
                       </div>
-                  </div><!--end lastMod -->
+                  </div>
                   </div><!--end landingTemplate_LSSI-->
               </article>
             
               <article class="secondTemplate">
-               <div class="landingTemplate_SWS cb">
-                    <div class="firstMod topBlock"> 
-                          <div class="smallBlock">
+               <div class="landingTemplate_SWS shortTemplate cb">
+                   <div class="squarePadding excludeFromMobile"></div>
+                      <div class="blocksContain">
+                          <div class="smallBlock firstBlock">
                               <div class="offerCount">
                                    <p class="countNumber">10</p>
                                    <p>DEALS</p>
@@ -126,9 +122,7 @@
                                   Automotive
                               </h2>
                           </div>
-                	</div>
-                    <div class="firstMod topBlock"> 
-                        <div class="wideBlock wideListingBlock">
+                          <div class="wideBlock wideListingBlock middleBlock">
                             <div class="containText">
                                 <div class="dealInblock">
                                     20-40% Off
@@ -142,15 +136,13 @@
                                 <div class="addDealInBlock excludeFromTablet excludeFromMobile">
                                     additional deal information
                                 </div>
-                                <div class="hoursRemaining">
+                                <div class="timeRemaining">
                                     <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
                                 </div>
                             </div>
                                 <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
-                        </div>
-                    </div>
-                    <div class="firstMod topBlock"> 
-                          <div class="smallBlock">
+                          </div>
+                          <div class="smallBlock lastBlock">
                               <div class="offerCount">
                                    <p class="countNumber">10</p>
                                    <p>DEALS</p>
@@ -161,7 +153,54 @@
                               </h2>
                           </div>
                     </div>
-                </div>
+                </div><!-- landingTemplate_SWS -->
+              </article>
+               <article class="thirdTemplate">
+               <div class="landingTemplate_SWS shortTemplate cb">
+                   <div class="squarePadding excludeFromMobile"></div>
+                      <div class="blocksContain">
+                          <div class="smallBlock firstBlock">
+                              <div class="offerCount">
+                                   <p class="countNumber">10</p>
+                                   <p>DEALS</p>
+                              </div>
+                                  <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
+                              <h2>
+                                  Automotive
+                              </h2>
+                          </div>
+                          <div class="wideBlock wideListingBlock middleBlock">
+                            <div class="containText">
+                                <div class="dealInblock">
+                                    20-40% Off
+                                </div>
+                                <div class="pqInBlock">
+                                	each
+                                </div>
+                                <div class="titleInBlock">
+                                    Men's Shirts
+                                </div> 
+                                <div class="addDealInBlock excludeFromTablet excludeFromMobile">
+                                    additional deal information
+                                </div>
+                                <div class="timeRemaining">
+                                    <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
+                                </div>
+                            </div>
+                                <img class="imageContain" src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
+                          </div>
+                          <div class="smallBlock lastBlock">
+                              <div class="offerCount">
+                                   <p class="countNumber">10</p>
+                                   <p>DEALS</p>
+                              </div>
+                                  <img class="imageContain"src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
+                              <h2>
+                                  Automotive
+                              </h2>
+                          </div>
+                    </div>
+                </div><!-- landingTemplate_SWS -->
               </article>
        	</section><!-- end GridContain-->
         
